--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "hyva-themes/magento2-compat-module-fallback": "*",
         "hyva-themes/magento2-default-theme": "^1.3",
-        "walkwizus/magento2-module-meilisearch": ">=1.0.40"
+        "walkwizus/magento2-module-meilisearch": "^1.0.41"
     },
     "autoload": {
         "files": [
